fixed page spacing, added focus element to tab buttons

--- a/design.css
+++ b/design.css
@@ -15,10 +15,8 @@
 *{
     padding: 0;
     /* font-family: SailorsDiary, sans-serif; */
-}
-
-.text {
-    font-family: Qontra, sans-serif;
+    /* font-color: #ecf0f1; */
+    color: #F5F5F5;
 }
 
 body{
@@ -26,4 +24,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#designBtn{
+    background-color: #21252D;
 }
