--- a/portfolio.css
+++ b/portfolio.css
@@ -17,3 +17,7 @@ body{
     margin: auto;
     margin-top: -250px;
 }
+
+#illustrationsBtn{
+    background-color: #21252D;
+}
